--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,8 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'com.google.gms.google-services'
+    id 'com.google.firebase.crashlytics'
 }
 
 android {
@@ -78,7 +80,9 @@ android {
             buildConfigField "int", "TYPE", "1"
 //            buildConfigField "boolean", "ENABLE_SETTINGS", "false"
 
-            manifestPlaceholders = [app_icon: "@drawable/ic_logo_pro"]
+            manifestPlaceholders = [app_icon: "@drawable/ic_logo_pro",
+                                    provider: "cn.lancet.lancetmusic.fileprovider",
+                                    app_round:"@mipmap/ic_launcher"]
         }
         dev {
             dimension "mode"
@@ -87,7 +91,9 @@ android {
             buildConfigField "int", "TYPE", "2"
 //            buildConfigField "boolean", "ENABLE_SETTINGS", "true"
 
-            manifestPlaceholders = [app_icon: "@drawable/ic_logo_dev"]
+            manifestPlaceholders = [app_icon: "@drawable/ic_logo_dev",
+                                    provider: "cn.lancet.lancetmusic.dev.fileprovider",
+                                    app_round: "@mipmap/ic_launcher"]
         }
     }
 
@@ -118,6 +124,8 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
     implementation 'androidx.navigation:navigation-fragment-ktx:2.4.2'
     implementation 'androidx.navigation:navigation-ui-ktx:2.4.2'
+    implementation 'com.google.firebase:firebase-crashlytics-ktx:18.2.9'
+    implementation 'com.google.firebase:firebase-analytics-ktx:20.1.2'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
