--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,15 +12,12 @@
         android:icon="${app_icon}"
         android:label="@string/app_name"
         android:networkSecurityConfig="@xml/network_security_config"
-        android:roundIcon="${app_icon}"
+        android:roundIcon="${app_round}"
         android:supportsRtl="true"
         android:theme="@style/Theme.LancetMusic"
         tools:targetApi="31">
         <activity
-            android:name=".PlayMusicActivity"
-            android:exported="false" />
-        <activity
-            android:name=".AlbumActivity"
+            android:name=".ui.activity.PlayMusicActivity"
             android:exported="false" />
         <activity
             android:name=".ui.activity.SplashActivity"
@@ -37,7 +34,31 @@
         <activity android:name=".ui.activity.LoginActivity" />
         <activity android:name=".ui.activity.ModifyPasswordActivity" />
         <activity android:name=".ui.activity.AlbumListActivity" />
-        <activity android:name="cn.lancetmusic.ui.activity.PlayMusicActivity" />
+
+
+<!--        <provider-->
+<!--            android:authorities="${provider_name}"-->
+<!--            android:name="androidx.core.content.FileProvider"-->
+<!--            android:exported="false"-->
+<!--            android:grantUriPermissions="true">-->
+<!--            <meta-data-->
+<!--                android:name="androidx.core.FILES_PROVIDER_PATH"-->
+<!--                android:resource="@xml/provider_paths" />-->
+<!--        </provider>-->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
     </application>
 
 </manifest>
