--- a/build.gradle
+++ b/build.gradle
@@ -42,8 +42,11 @@ buildscript {
         commitHash = "git rev-parse --short HEAD".execute().text.trim()
         println("proguardForDebug=**********************"+proguardForDebug+" commit="+commitHash)
     }
-
-
+    dependencies {
+        classpath 'com.android.tools.build:gradle:3.4.0'
+        classpath 'com.google.gms:google-services:4.3.10'
+        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.8.1'
+    }
 }
 
 plugins {
